cmake_minimum_required(VERSION 3.5)
project(node)

set(CMAKE_CXX_STANDARD 11)
find_package( OpenCV REQUIRED )
find_package( Boost REQUIRED COMPONENTS system)
include_directories( ${OpenCV_INCLUDE_DIRS})
include_directories( ${Boost_INCLUDE_DIR})


file(GLOB SOURCE_FILES
        "detection/*.h"
        "detection/*.cpp"
        "detection/*.hpp"
        "include/*.h"
        "maxi_cv.cpp"
        "drivers/*.h"
        "drivers/*.c"
        )

#set(SOURCE_FILES maxi.cpp drivers/xbacksub.c drivers/xbacksub.h drivers/xfeature.c drivers/xfeature.h include/xparameters.h)

add_executable(node ${SOURCE_FILES})

target_link_libraries( node ${OpenCV_LIBS} ${Boost_LIBRARIES} -lpthread )
